create_info_panel: fix overflow bug for panel values
mode-line: use js instead of css to fix overflow

hints_url_panel: use js instead of css to fix overflow

mode-line widgets' property `name' was renamed to `class_name'

--- a/style/blackened/mode-line.css
+++ b/style/blackened/mode-line.css
@@ -8,7 +8,3 @@
 .mode-line label {
     color: white;
 }
-
-.mode-line label.current-buffer-name-widget {
-    -moz-box-flex: 1;
-}
